src/grammar/IoTLangParser.java
package grammar;
// Generated from IoTLang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class IoTLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SENSOR=1, ACTUADOR=2, VAR=3, SI=4, SINO=5, MIENTRAS=6, CADA=7, ENCENDER=8, 
		APAGAR=9, AJUSTAR=10, ENVIARSENAL=11, LEERTEMPERATURA=12, LEERHUMEDAD=13, 
		LEERESTADO=14, ESPERAR=15, PROGRAMAR=16, CANCELAR=17, IMPRIMIR=18, REGISTRAR=19, 
		ALERTA=20, VERDADERO=21, FALSO=22, DECIMAL=23, NUMERO=24, STRING=25, ID=26, 
		PLUS=27, MINUS=28, MULT=29, DIV=30, GTE=31, LTE=32, EQ=33, NEQ=34, GT=35, 
		LT=36, ASSIGN=37, SEMICOLON=38, COMMA=39, LPAREN=40, RPAREN=41, LBRACE=42, 
		RBRACE=43, COMMENT=44, BLOCK_COMMENT=45, WS=46, ERROR_CHAR=47;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_sensorDecl = 2, RULE_actuadorDecl = 3, 
		RULE_varDecl = 4, RULE_assignStmt = 5, RULE_encenderStmt = 6, RULE_apagarStmt = 7, 
		RULE_ajustarStmt = 8, RULE_enviarSenalStmt = 9, RULE_leerTempStmt = 10, 
		RULE_leerHumStmt = 11, RULE_leerEstadoStmt = 12, RULE_esperarStmt = 13, 
		RULE_programarStmt = 14, RULE_cancelarStmt = 15, RULE_imprimirStmt = 16, 
		RULE_registrarStmt = 17, RULE_alertaStmt = 18, RULE_ifStmt = 19, RULE_whileStmt = 20, 
		RULE_condition = 21, RULE_boolLiteral = 22, RULE_expr = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "sensorDecl", "actuadorDecl", "varDecl", "assignStmt", 
			"encenderStmt", "apagarStmt", "ajustarStmt", "enviarSenalStmt", "leerTempStmt", 
			"leerHumStmt", "leerEstadoStmt", "esperarStmt", "programarStmt", "cancelarStmt", 
			"imprimirStmt", "registrarStmt", "alertaStmt", "ifStmt", "whileStmt", 
			"condition", "boolLiteral", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'sensor'", "'actuador'", "'var'", "'si'", "'sino'", "'mientras'", 
			"'cada'", "'encender'", "'apagar'", "'ajustar'", "'enviarSenal'", "'leerTemperatura'", 
			"'leerHumedad'", "'leerEstado'", "'esperar'", "'programar'", "'cancelar'", 
			"'imprimir'", "'registrar'", "'alerta'", "'verdadero'", "'falso'", null, 
			null, null, null, "'+'", "'-'", "'*'", "'/'", "'>='", "'<='", "'=='", 
			"'!='", "'>'", "'<'", "'='", "';'", "','", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SENSOR", "ACTUADOR", "VAR", "SI", "SINO", "MIENTRAS", "CADA", 
			"ENCENDER", "APAGAR", "AJUSTAR", "ENVIARSENAL", "LEERTEMPERATURA", "LEERHUMEDAD", 
			"LEERESTADO", "ESPERAR", "PROGRAMAR", "CANCELAR", "IMPRIMIR", "REGISTRAR", 
			"ALERTA", "VERDADERO", "FALSO", "DECIMAL", "NUMERO", "STRING", "ID", 
			"PLUS", "MINUS", "MULT", "DIV", "GTE", "LTE", "EQ", "NEQ", "GT", "LT", 
			"ASSIGN", "SEMICOLON", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"COMMENT", "BLOCK_COMMENT", "WS", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IoTLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IoTLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IoTLangParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 69177182L) != 0)) {
				{
				{
				setState(48);
				statement();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SensorDeclContext sensorDecl() {
			return getRuleContext(SensorDeclContext.class,0);
		}
		public ActuadorDeclContext actuadorDecl() {
			return getRuleContext(ActuadorDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public EncenderStmtContext encenderStmt() {
			return getRuleContext(EncenderStmtContext.class,0);
		}
		public ApagarStmtContext apagarStmt() {
			return getRuleContext(ApagarStmtContext.class,0);
		}
		public AjustarStmtContext ajustarStmt() {
			return getRuleContext(AjustarStmtContext.class,0);
		}
		public EnviarSenalStmtContext enviarSenalStmt() {
			return getRuleContext(EnviarSenalStmtContext.class,0);
		}
		public LeerTempStmtContext leerTempStmt() {
			return getRuleContext(LeerTempStmtContext.class,0);
		}
		public LeerHumStmtContext leerHumStmt() {
			return getRuleContext(LeerHumStmtContext.class,0);
		}
		public LeerEstadoStmtContext leerEstadoStmt() {
			return getRuleContext(LeerEstadoStmtContext.class,0);
		}
		public EsperarStmtContext esperarStmt() {
			return getRuleContext(EsperarStmtContext.class,0);
		}
		public ProgramarStmtContext programarStmt() {
			return getRuleContext(ProgramarStmtContext.class,0);
		}
		public CancelarStmtContext cancelarStmt() {
			return getRuleContext(CancelarStmtContext.class,0);
		}
		public ImprimirStmtContext imprimirStmt() {
			return getRuleContext(ImprimirStmtContext.class,0);
		}
		public RegistrarStmtContext registrarStmt() {
			return getRuleContext(RegistrarStmtContext.class,0);
		}
		public AlertaStmtContext alertaStmt() {
			return getRuleContext(AlertaStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				sensorDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				actuadorDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				varDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				assignStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				encenderStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(61);
				apagarStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(62);
				ajustarStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(63);
				enviarSenalStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(64);
				leerTempStmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(65);
				leerHumStmt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(66);
				leerEstadoStmt();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(67);
				esperarStmt();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(68);
				programarStmt();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(69);
				cancelarStmt();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(70);
				imprimirStmt();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(71);
				registrarStmt();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(72);
				alertaStmt();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(73);
				ifStmt();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(74);
				whileStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SensorDeclContext extends ParserRuleContext {
		public TerminalNode SENSOR() { return getToken(IoTLangParser.SENSOR, 0); }
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public SensorDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sensorDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitSensorDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SensorDeclContext sensorDecl() throws RecognitionException {
		SensorDeclContext _localctx = new SensorDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sensorDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(SENSOR);
			setState(78);
			match(ID);
			setState(79);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActuadorDeclContext extends ParserRuleContext {
		public TerminalNode ACTUADOR() { return getToken(IoTLangParser.ACTUADOR, 0); }
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public ActuadorDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actuadorDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitActuadorDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActuadorDeclContext actuadorDecl() throws RecognitionException {
		ActuadorDeclContext _localctx = new ActuadorDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actuadorDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(ACTUADOR);
			setState(82);
			match(ID);
			setState(83);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(IoTLangParser.VAR, 0); }
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(IoTLangParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(VAR);
			setState(86);
			match(ID);
			setState(87);
			match(ASSIGN);
			setState(88);
			expr(0);
			setState(89);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignStmtContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(IoTLangParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(ID);
			setState(92);
			match(ASSIGN);
			setState(93);
			expr(0);
			setState(94);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EncenderStmtContext extends ParserRuleContext {
		public TerminalNode ENCENDER() { return getToken(IoTLangParser.ENCENDER, 0); }
		public TerminalNode LPAREN() { return getToken(IoTLangParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode RPAREN() { return getToken(IoTLangParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public EncenderStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encenderStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitEncenderStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EncenderStmtContext encenderStmt() throws RecognitionException {
		EncenderStmtContext _localctx = new EncenderStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_encenderStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(ENCENDER);
			setState(97);
			match(LPAREN);
			setState(98);
			match(ID);
			setState(99);
			match(RPAREN);
			setState(100);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ApagarStmtContext extends ParserRuleContext {
		public TerminalNode APAGAR() { return getToken(IoTLangParser.APAGAR, 0); }
		public TerminalNode LPAREN() { return getToken(IoTLangParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode RPAREN() { return getToken(IoTLangParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public ApagarStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_apagarStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitApagarStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApagarStmtContext apagarStmt() throws RecognitionException {
		ApagarStmtContext _localctx = new ApagarStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_apagarStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(APAGAR);
			setState(103);
			match(LPAREN);
			setState(104);
			match(ID);
			setState(105);
			match(RPAREN);
			setState(106);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AjustarStmtContext extends ParserRuleContext {
		public TerminalNode AJUSTAR() { return getToken(IoTLangParser.AJUSTAR, 0); }
		public TerminalNode LPAREN() { return getToken(IoTLangParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode COMMA() { return getToken(IoTLangParser.COMMA, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(IoTLangParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public AjustarStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ajustarStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitAjustarStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AjustarStmtContext ajustarStmt() throws RecognitionException {
		AjustarStmtContext _localctx = new AjustarStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ajustarStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(AJUSTAR);
			setState(109);
			match(LPAREN);
			setState(110);
			match(ID);
			setState(111);
			match(COMMA);
			setState(112);
			expr(0);
			setState(113);
			match(RPAREN);
			setState(114);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnviarSenalStmtContext extends ParserRuleContext {
		public TerminalNode ENVIARSENAL() { return getToken(IoTLangParser.ENVIARSENAL, 0); }
		public TerminalNode LPAREN() { return getToken(IoTLangParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(IoTLangParser.ID, 0); }
		public TerminalNode COMMA() { return getToken(IoTLangParser.COMMA, 0); }
		public TerminalNode STRING() { return getToken(IoTLangParser.STRING, 0); }
		public TerminalNode RPAREN() { return getToken(IoTLangParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public EnviarSenalStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enviarSenalStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitEnviarSenalStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnviarSenalStmtContext enviarSenalStmt() throws RecognitionException {
		EnviarSenalStmtContext _localctx = new EnviarSenalStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_enviarSenalStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(ENVIARSENAL);
			setState(117);
			match(LPAREN);
			setState(118);
			match(ID);
			setState(119);
			match(COMMA);
			setState(120);
			match(STRING);
			setState(121);
			match(RPAREN);
			setState(122);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeerTempStmtContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(IoTLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(IoTLangParser.ID, i);
		}
		public TerminalNode ASSIGN() { return getToken(IoTLangParser.ASSIGN, 0); }
		public TerminalNode LEERTEMPERATURA() { return getToken(IoTLangParser.LEERTEMPERATURA, 0); }
		public TerminalNode LPAREN() { return getToken(IoTLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(IoTLangParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(IoTLangParser.SEMICOLON, 0); }
		public LeerTempStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leerTempStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IoTLangVisitor ) return ((IoTLangVisitor<? extends T>)visitor).visitLeerTempStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LeerTempStmtContext leerTempStmt() throws RecognitionException {
		LeerTempStmtContext _localctx = new LeerTempStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_leerTempStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ID);
			setState(125);
			match(ASSIGN);
			setState(126);
			match(LEERTEMPERATURA);
			setState(127);
			match(LPAREN);
			setState(128);
			match(ID);
			setState(129);
			match(RPAREN);
			setState(130);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
